강원대 BE_이세진 4주차 과제 (3단계) (#435)
* fix : 기본 생성자 가시성 변경

* fix : 생성자 주입으로 변경

* fix : 잘못된 메소드명 수정

* fix : 잘못된 변수명 수정

* fix : vo 적용

* feat : 멤버테스트 구현

* fix : 수정

* keep

* keep

* 상품 api부터 찬찬히 살펴보기 위한 주석처리

* 상품 api 유효성 검증까지 응답과 요청 성공 확인완료

* 프론트(관리자 화면) 잘 동작하는지 확인완료

* 회원 로그인 작동 확인완료

* 위시리스트 mvc 작동 확인

* 엔티티 매핑

* h2 데이터 생성 확인완료

* 시큐리티 : 모든 엔드포인트 접근 허용

* 위시 DTO 수정

* 상품서비스에 페이지네이션 메소드 추가

* 위시서비스에 페이지네이션 메소드 추가

* getAllProduct() 지우고 getProduct(pageable)로 구현

* 위시컨트롤러 페이징

* 충돌하지않게 getProducts랑 findAll의 엔드포인트 구별

* 제약 조건 설정했는데도 계속 NULL 값 때문에 발생하는 오류 해결 중

* 실행 정상 확인

* 옵션 관련 클래스 생성

* 옵션 수량 차감 등 기능 구현

* @DataJpaTest 성공 확인완료

* README.md 작성

* localhost:8080 페이지